--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-12-20 07:58+0100\n"
+"POT-Creation-Date: 2019-01-03 21:50+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -2018,6 +2018,24 @@ msgstr ""
 "Profesor Juraj Hromkovič, DrSc., ktorý pôsobí ako vysokoškolský pedagóg "
 "vo Švajčiarskom federálnom technologickom inštitúte (ETH) v Zürichu."
 
+#: templates/speakers.html:130
+msgid "CS student and Python enthusiast"
+msgstr "študent informatiky a Python nadšenec"
+
+#: templates/speakers.html:139
+msgid ""
+"Luke is 17 and is studying computer science, maths, further maths and "
+"physics in Year 12 (English Secondary school / Sixthform). He loves to "
+"program in Python and thinks that the micro:bit is a great eductional "
+"tool and should be more widely used. He has given previous talks at Pycon"
+" UK and is looking forward to speaking at Pycon SK 2019."
+msgstr ""
+"Luke je 17-ročný študent informatiky, matematiky, pokročilej matematiky "
+"a fyziky v 12. ročníku (anglická stredná škola). Rád programuje v Pythone"
+" a micro:bit považuje za skvelý nástroj na výuku, ktorý by sa mal oveľa "
+"viac využívať. V minulosti už prednášal na PyCon UK a teší sa na "
+"prednášku na PyCon SK 2019."
+
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
 msgid "Sponsors &amp; Partners"
 msgstr "Sponzori a partneri"
@@ -2073,10 +2091,11 @@ msgid ""
 " magnets, badges &amp; more. Order in seconds and get free online proofs,"
 " free shipping, and super fast turnaround!"
 msgstr ""
-"Sticker Mule je najrýchlejší a najjednoduchší spôsob ako nakúpiť ľubovoľné "
-"tlačové produkty. Tisícky ľudí nám už zverili výrobu nadupaných nálepiek, "
-"štítkov, magnetiek, odznakov... Objednajte si v priebehu niekoľkých sekúnd "
-"a získajte online záruku, dopravu zdarma super rýchle doručenie!"
+"Sticker Mule je najrýchlejší a najjednoduchší spôsob ako nakúpiť "
+"ľubovoľné tlačové produkty. Tisícky ľudí nám už zverili výrobu nadupaných"
+" nálepiek, štítkov, magnetiek, odznakov... Objednajte si v priebehu "
+"niekoľkých sekúnd a získajte online záruku, dopravu zdarma super rýchle "
+"doručenie!"
 
 #: templates/sponsoring.html:70
 msgid "Media Partners"
