added slovak translation for job fair and regenerated static

--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-01-03 21:50+0100\n"
+"POT-Creation-Date: 2019-01-07 16:02+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -45,61 +45,69 @@ msgstr "Rečníci"
 msgid "Call for proposals"
 msgstr "Prihlás svoj návrh na prednášku"
 
-#: templates/body.html:91 templates/schedule.html:8 templates/schedule.html:17
+#: templates/body.html:90
+msgid "Program"
+msgstr "Program"
+
+#: templates/body.html:94 templates/schedule.html:8 templates/schedule.html:17
 msgid "Schedule"
 msgstr "Program"
 
-#: templates/body.html:99
+#: templates/body.html:97
+msgid "Job Fair"
+msgstr "Job Fair"
+
+#: templates/body.html:103
 msgid "Sponsoring"
 msgstr "Sponzoruj"
 
-#: templates/body.html:103 templates/edusummit.html:8
+#: templates/body.html:107 templates/edusummit.html:8
 #: templates/edusummit.html:18
 msgid "EduSummit"
 msgstr "EduSummit"
 
-#: templates/body.html:107 templates/body.html:230
+#: templates/body.html:111 templates/body.html:234
 msgid "About Us"
 msgstr "O nás"
 
-#: templates/body.html:110
+#: templates/body.html:114
 msgid "FAQ"
-msgstr ""
+msgstr "FAQ"
 
-#: templates/body.html:111 templates/tickets.html:144 templates/venue.html:33
+#: templates/body.html:115 templates/tickets.html:144 templates/venue.html:33
 msgid "Venue"
 msgstr "Miesto konania"
 
-#: templates/body.html:112 templates/coc.html:7 templates/coc.html:16
+#: templates/body.html:116 templates/coc.html:7 templates/coc.html:16
 msgid "Code of Conduct"
 msgstr "Kódex správania"
 
-#: templates/body.html:113 templates/cfv.html:13 templates/cfv.html:23
+#: templates/body.html:117 templates/cfv.html:13 templates/cfv.html:23
 msgid "Call for volunteers"
 msgstr "Pridaj sa k nám"
 
-#: templates/body.html:114 templates/body.html:217
+#: templates/body.html:118 templates/body.html:221
 msgid "SPy o.z."
 msgstr "SPy o.z."
 
-#: templates/body.html:119 templates/faq.html:66 templates/tickets.html:13
+#: templates/body.html:123 templates/faq.html:66 templates/tickets.html:13
 #: templates/tickets.html:22
 msgid "Tickets"
 msgstr "Vstupenky"
 
-#: templates/body.html:154
+#: templates/body.html:158
 msgid "General Queries"
 msgstr "Všeobecné otázky"
 
-#: templates/body.html:166
+#: templates/body.html:170
 msgid "Ticket Queries"
 msgstr "Otázky o vstupenkách"
 
-#: templates/body.html:178
+#: templates/body.html:182
 msgid "Event Organiser"
 msgstr "Organizátor podujatia"
 
-#: templates/body.html:212
+#: templates/body.html:216
 #, python-format
 msgid ""
 "%(pycontm)s is a trademark for worldwide conference activities claimed by"
@@ -108,21 +116,21 @@ msgstr ""
 "%(pycontm)s je ochranná známka %(psf)s pre celosvetové konferenčné "
 "aktivity."
 
-#: templates/body.html:214
+#: templates/body.html:218
 msgid "Python Software foundation"
 msgstr "Python Software foundation"
 
-#: templates/body.html:216
+#: templates/body.html:220
 #, python-format
 msgid "PyCon SK is organized by volunteers from %(spy)s."
 msgstr "PyCon SK je organizovaný dobrovoľníkmi z %(spy)s."
 
-#: templates/body.html:217
+#: templates/body.html:221
 #, python-format
 msgid "Our <a href=\"%(url)s\">Privacy Policy</a>."
 msgstr "Naše pravidlá pre <a href=\"%(url)s\">Ochranu súkromia</a>"
 
-#: templates/body.html:219
+#: templates/body.html:223
 #, python-format
 msgid ""
 "Found a bug? Missing some information? This is community managed website,"
@@ -131,23 +139,23 @@ msgstr ""
 "Našiel/našla si chybu? Chýba ti nejaká informácia? Toto je komunitou "
 "manažovaná webstránka, prispej na našom %(github)se."
 
-#: templates/body.html:232
+#: templates/body.html:236
 msgid "Become a Sponsor"
 msgstr "Staň sa sponzorom"
 
-#: templates/body.html:233 templates/index.html:119
+#: templates/body.html:237 templates/index.html:119
 msgid "Submit your talk"
 msgstr "Prihlás svoju prednášku"
 
-#: templates/body.html:235
+#: templates/body.html:239
 msgid "Help out as a volunteer"
 msgstr "Pomôž ako dobrovoľník"
 
-#: templates/body.html:236
+#: templates/body.html:240
 msgid "Buy your ticket"
 msgstr "Kúp si lístok"
 
-#: templates/body.html:254
+#: templates/body.html:258
 msgid "Back to Top"
 msgstr "Návrat na vrch stránky"
 
@@ -1459,6 +1467,105 @@ msgstr "senior softvér vývojárka v Google AI Genomics"
 msgid "Python engineer at Elastic"
 msgstr "Python vývojár v Elastic"
 
+#: templates/job-fair.html:8
+msgid "Job fair"
+msgstr "Job fair"
+
+#: templates/job-fair.html:20
+msgid ""
+"An opportunity for employers to look for candidates in tech conference "
+"packed with geeks and programmers in general and also for more or less "
+"experienced job seekers to meet with multiple tech companies in one "
+"place."
+msgstr ""
+"Príležitosť pre zamestnávateľov hľadať pracovníkov priamo na konferencii "
+"plnej geekov a programátorov, ale aj pre viac či menej skúsených "
+"kandidátov, ktorí tu nájdu viaceré IT spoločnosti v rovnakom čase na "
+"jednom mieste."
+
+#: templates/job-fair.html:23
+msgid "Employers"
+msgstr "Zamestnávatelia"
+
+#: templates/job-fair.html:25
+msgid ""
+"PyCon SK will be the capital of Python for three days, it will become a "
+"place with the highest density of Python programmers per square meter. "
+msgstr ""
+"PyCon SK bude hlavným mestom Pythonu, na tri dni sa stane miestom s "
+"najvyššou hustotou Pythonistov na štvorcový meter. "
+
+#: templates/job-fair.html:26
+msgid ""
+"You can seek for fresh graduates, but also for seasoned programmers who "
+"are looking for a change in their careers. "
+msgstr ""
+"Môžete tu hľadať čerstvých absolventov, ale aj skúsených programátorov, "
+"ktorí práve hľadajú nové výzvy vo svojej kariére. "
+
+#: templates/job-fair.html:27
+msgid "Present your company and show what it is like to work with you. "
+msgstr "Predstavte svoju spoločnosť a ukážte, aké to je pracovať pre vás. "
+
+#: templates/job-fair.html:30
+msgid "Students"
+msgstr "Študenti"
+
+#: templates/job-fair.html:32
+msgid ""
+"Looking for your first real job as a programmer? PyCon SK is a great "
+"place with many companies eager to hire a Pythonista. "
+msgstr ""
+"Hľadáš si svoj prvý skutočný programátorský job? PyCon SK je na to "
+"ideálny - bude tu množstvo firiem, ktoré sa budú chcieť získať novú "
+"posilu do tímu Pythonistov. "
+
+#: templates/job-fair.html:33
+msgid ""
+"Visit our Job fair or drop in the sponsors booths and talk with your "
+"potential future employer. "
+msgstr ""
+"Navštív náš Job fair, alebo sa zastav v sponzorských stánkoch a pokecaj "
+"so svojim možným budúcim zamestnávateľom. "
+
+#: templates/job-fair.html:34
+msgid "Get an idea of how the interview with recruiter looks like. "
+msgstr "Zisti, ako to vyzerá na skutočnom pohovore."
+
+#: templates/job-fair.html:35
+msgid "Find the company that suits you and can use your skills best. "
+msgstr ""
+"Nájdi firmu, ktorá ti sedí a ktorá bude vedieť tvoje schopnosti využiť "
+"najlepšie. "
+
+#: templates/job-fair.html:38
+msgid "Professionals"
+msgstr "Profesionáli"
+
+#: templates/job-fair.html:40
+msgid ""
+"If you feel an urge to change your career after years of routine work, "
+"PyCon SK is the best place for you. "
+msgstr ""
+"Ak cítite potrebu zmeny po rokoch rutiny, PyCon SK je to najlepšie miesto"
+" pre vás. "
+
+#: templates/job-fair.html:41
+msgid ""
+"Visit our job fair and talk with companies that will appreciate your "
+"experience.  "
+msgstr ""
+"Navštívte náš Job fair a porozprávajte sa so spoločnosťami, ktoré ocenia "
+"vaše dlhoročné skúsenosti.  "
+
+#: templates/job-fair.html:42
+msgid ""
+"Even if you do not look for a new job, you might get an overview of what "
+"options you have. "
+msgstr ""
+"Dokonca aj keď práve nehľadáte nový job, nikdy nezaškodí mať prehľad o "
+"tom, aké možnosti máte k dispozícii. "
+
 #: templates/mailchimp.html:2
 msgid "Stay Updated"
 msgstr "Ostaň v kontakte"
@@ -1481,17 +1588,19 @@ msgstr "Prihlásiť sa"
 
 #: templates/mailchimp.html:17
 msgid "Which newsletters do you wish to subscribe to?"
-msgstr ""
+msgstr "Na ktorý newsletter sa chceš prihlásiť?"
 
 #: templates/mailchimp.html:20
 msgid "PyCon SK Newsletter (conference updates in EN lang.)"
-msgstr ""
+msgstr "PyCon SK Newsletter (info o konferncii, anglicky)"
 
 #: templates/mailchimp.html:24
 msgid ""
 "SPy o.z. Newsletter (monthly updates on Python meetups, PyCon SK and "
 "Učíme s Hardvérom - in SK lang.)"
 msgstr ""
+"SPy o.z. Newsletter (mesačný newsletter o Python meetupoch, PyCon SK a "
+"Učíme s Hardvérom, slovensky)"
 
 #: templates/mailchimp.html:29
 msgid "Email Marketing Permissions"
@@ -2030,9 +2139,9 @@ msgid ""
 "tool and should be more widely used. He has given previous talks at Pycon"
 " UK and is looking forward to speaking at Pycon SK 2019."
 msgstr ""
-"Luke je 17-ročný študent informatiky, matematiky, pokročilej matematiky "
-"a fyziky v 12. ročníku (anglická stredná škola). Rád programuje v Pythone"
-" a micro:bit považuje za skvelý nástroj na výuku, ktorý by sa mal oveľa "
+"Luke je 17-ročný študent informatiky, matematiky, pokročilej matematiky a"
+" fyziky v 12. ročníku (anglická stredná škola). Rád programuje v Pythone "
+"a micro:bit považuje za skvelý nástroj na výuku, ktorý by sa mal oveľa "
 "viac využívať. V minulosti už prednášal na PyCon UK a teší sa na "
 "prednášku na PyCon SK 2019."
 
