--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-01-08 20:44+0100\n"
+"POT-Creation-Date: 2019-01-09 20:58+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -2173,6 +2173,48 @@ msgstr ""
 "viac využívať. V minulosti už prednášal na PyCon UK a teší sa na "
 "prednášku na PyCon SK 2019."
 
+#: templates/speakers.html:146
+msgid ""
+"Controling a robotic arm with micro:bits. How to make computer science "
+"education more interesting."
+msgstr ""
+"Ovládanie robotického ramena micro:bitmi. Ako urobiť hodiny programovania"
+" zaujímavejšími."
+
+#: templates/speakers.html:147
+msgid ""
+"Captivating a group of children for a sustained period of time is "
+"notoriously hard. I will be exporing with you how the micro:bit can be "
+"used to engage a young audience with interactive demos and programming "
+"activities."
+msgstr ""
+"Je všeobecne známe, že získať pozornosť detí na dlhšiu dobu je veľmi "
+"ťažké. Spolu preskúmame, ako môžeme s micro:bitom zaujať mladé publikum "
+"pomocou interaktívnych dem a programátorských aktivít."
+
+#: templates/speakers.html:148
+msgid ""
+"Children love to physically interact with hardware. That is what is great"
+" about the micro:bit. It not only has built in LEDs and buttons but can "
+"also control bigger more exciting electronics like robotic arms. This "
+"allows for setup that gives students of all ability levels a challenge. "
+"Students that are beginners to programming can be given a more complete "
+"program or walk throught a worksheet that takes them through the process "
+"of controling the device (in this case a robotic arm) step by step. "
+"Students that have higher programming skills can be given a more bare "
+"bones / boilerplate source file and can write code to control the arm "
+"with less guidance."
+msgstr ""
+"Deti zbožňujú fyzickú interakciu s hardvérom. Presne to je skvelé na "
+"micro:bite. Nielenže má vstavané LEDky a tlačidlá, ale dokáže ovládať "
+"väčšie a vzrušujúcejšie zariadenia ako napríklad robotické ramená. To "
+"umožňuje pripraviť výzvu pre študentov na rôznych úrovniach. Študentom, "
+"ktorý sú v programovaní začiatočníci, môžeme zadať pokročilý program, "
+"alebo návod krok za krokom, ktorý ich prevedie celým procesom ovládania "
+"zariadenia (v tomto prípade robotického ramena). Pokročilejší študenti "
+"môžu dostať menej komplexný zdrojový súbor a môžu písať kód na ovládanie "
+"ramena samostatnejšie."
+
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
 msgid "Sponsors &amp; Partners"
 msgstr "Sponzori a partneri"
@@ -2242,15 +2284,15 @@ msgstr "Medálni partneri"
 msgid "Partners"
 msgstr "Partneri"
 
-#: templates/sponsoring.html:129
+#: templates/sponsoring.html:147
 msgid "Why become a sponsor?"
 msgstr "Prečo sa stať sponzorom?"
 
-#: templates/sponsoring.html:130
+#: templates/sponsoring.html:148
 msgid "We need you — PyCon SK 2019 in Bratislava seeks for sponsors and partners!"
 msgstr "Potrebujeme vás — PyCon SK 2019 v Bratislave hľadá sponzorov a partnerov!"
 
-#: templates/sponsoring.html:135
+#: templates/sponsoring.html:153
 msgid ""
 "PyCon is an annual gathering for the community using and developing the "
 "open-source Python programming language. The conference is completely "
@@ -2260,7 +2302,7 @@ msgstr ""
 "vyvíjajú open source programovací jazyk Python. Konferencia je kompletne "
 "organizovaná dobrovoľníkmi."
 
-#: templates/sponsoring.html:136
+#: templates/sponsoring.html:154
 msgid ""
 "The members of the Python community organize a PyCon conference in their "
 "home countries regularly, PyCon will happen in Slovakia for the fourth "
@@ -2270,7 +2312,7 @@ msgstr ""
 "domovských krajinách pravidelne. PyCon bude na Slovensku už po štvrtý "
 "raz."
 
-#: templates/sponsoring.html:140
+#: templates/sponsoring.html:158
 msgid ""
 "To ensure high-quality speakers and keep the tickets price available for "
 "everyone we need you, the sponsors, who allow the conference to take "
@@ -2280,7 +2322,7 @@ msgstr ""
 "vstupeniek dostupnú pre každého, potrebujeme vás, sponzorov, ktorí "
 "umožnia túto konferenciu uskutočniť."
 
-#: templates/sponsoring.html:144
+#: templates/sponsoring.html:162
 msgid ""
 "Do not hesitate to contact us. We are flexible and willing to work with "
 "you to design a sponsorship package that is going to meet your business "
@@ -2290,11 +2332,11 @@ msgstr ""
 "spolupracovať a navrhnúť s vami balíček sponzorstva, ktorý splní vaše "
 "obchodné potreby."
 
-#: templates/sponsoring.html:156
+#: templates/sponsoring.html:174
 msgid "Recruitment"
 msgstr "Nábor"
 
-#: templates/sponsoring.html:158
+#: templates/sponsoring.html:176
 msgid ""
 "Are you looking for programmers? PyCon is the best place for meeting new "
 "talents. Many participants will be experienced developers looking for "
@@ -2304,11 +2346,11 @@ msgstr ""
 " talentov. Mnohí účastníci budú skúsení vývojári, ktorí hľadajú svoj "
 "ďalší veľký kariérny krok."
 
-#: templates/sponsoring.html:167
+#: templates/sponsoring.html:185
 msgid "Audience"
 msgstr "Publikum"
 
-#: templates/sponsoring.html:169
+#: templates/sponsoring.html:187
 msgid ""
 "Want to get your message across to the people, so they talk about you? "
 "PyCon is a great opportunity. People in the Python community like to "
@@ -2318,11 +2360,11 @@ msgstr ""
 " na to skvelá príležitosť. Ľudia v Python komunite radi objavujú a "
 "zdieľajú nové veci."
 
-#: templates/sponsoring.html:178
+#: templates/sponsoring.html:196
 msgid "Marketing"
 msgstr "Marketing"
 
-#: templates/sponsoring.html:180
+#: templates/sponsoring.html:198
 msgid ""
 "Looking for new users for your product? Such people can be found at PyCon"
 " - they also will look for new products and ideas."
@@ -2330,11 +2372,11 @@ msgstr ""
 "Hľadáte nových používateľov pre váš produkt? Takých ľudí nájdete na "
 "PyCone - aj oni budú hľadať nové produkty a nápady."
 
-#: templates/sponsoring.html:189
+#: templates/sponsoring.html:207
 msgid "Community"
 msgstr "Komunita"
 
-#: templates/sponsoring.html:191
+#: templates/sponsoring.html:209
 msgid ""
 "Looking for new contributors and partners for your open source project? "
 "PyCon is the place, where they also will look for you."
@@ -2342,11 +2384,11 @@ msgstr ""
 "Hľadáte nových prispievateľov a partnerov pre váš open source projekt? "
 "PyCon je miesto, kde aj oni budú hľadať vás."
 
-#: templates/sponsoring.html:200
+#: templates/sponsoring.html:218
 msgid "Support"
 msgstr "Podpora"
 
-#: templates/sponsoring.html:202
+#: templates/sponsoring.html:220
 msgid ""
 "Are you using Python in your company? Support for community events is an "
 "excellent opportunity to contribute back."
@@ -2955,4 +2997,12 @@ msgstr ""
 #~ msgstr ""
 #~ "Viac informácií nájdeš na stránke <a "
 #~ "href=\"https://www.ucimeshardverom.sk\">www.ucimeshardverom.sk</a>"
+
+#~ msgid ""
+#~ "Controling a robotic arm with "
+#~ "micro:bits. How to make computer science"
+#~ " eduction more interesting."
+#~ msgstr ""
+#~ "Ovládanie robotického ramena micro:bitmi. Ako"
+#~ " urobiť hodiny programovania zaujímavejšími."
 
